# 42sh

./: README.md
21sh/deuteragonist/: Makefile.am  configure.ac
21sh/deuteragonist/src/: 42sh.c  Makefile.am
21sh/deuteragonist/src/ast/: Makefile.am  ast.c
21sh/deuteragonist/src/lexer/: Makefile.am  lexer.c
21sh/deuteragonist/src/parser/: Makefile.am  parser.c
21sh/echo/: echo  echo.c
21sh/mypipe/: mypipe.c
21sh/myredir/: Makefile  myredir.c  testsuite.sh  try  try.c  try.sh
42sh_coding/: Makefile.am  configure.ac
42sh_coding/src/: 42sh.c  Makefile.am
42sh_coding/src/ast/: ast.c  ast.h
42sh_coding/src/builtins/: Makefile.am  cd.c  cd.h  echo.c  echo.h  exit_builtin.c  exit_builtin.h
42sh_coding/src/exec/: Makefile.am  exec.c  exec.h
42sh_coding/src/expand/: Makefile.am  expand.c  expand.h  main_expand.c  variables.c  variables.h
42sh_coding/src/lexer/: lexer.c  lexer.h  main_lexer.c
42sh_coding/src/parser/: Makefile.am  and_or.c  and_or.h  command.c  command.h  compound_list.c  compound_list.h  else_clause.c  else_clause.h  list.c  list.h  parser.c  parser.h  pipeline.c  pipeline.h  rule_if.c  rule_if.h  shell_command.c  shell_command.h  simple_command.c  simple_command.h
42sh_coding/src/utils/: Makefile.am  utils.c  utils.h
42sh_coding/tests/: Makefile.am  conftest.py  run_tests.py  test_basic.py  testsuite.sh
42sh_coding/tests/test-unit/: test_unit.c
42sh_coding/tests/tests-unit/: test_unit.c
