#dossier cible
SUBDIRS = src tests
AM_CFLAGS = -std=c99 -pedantic -Werror -Wall -Wextra -Wvla

clean:
	rm -f \
		Makefile \
		Makefile.in \
		config.log \
		config.status \
		configure \
		aclocal.m4 \
		compile \
		depcomp \
		install-sh \
		missing \
		config.guess \
		config.sub \
		ltmain.sh
	rm -rf autom4te.cache